@@ -9,7 +9,11 @@ perl:
   - "5.14"
   - "5.12"
   - "5.10"
-install: 
+before_install:
+  - cpanm --local-lib=~/perl5 local::lib && eval $(perl -I ~/perl5/lib/perl5/ -Mlocal::lib)
+  - cpanm --notest Perl::Tidy
+  - cpanm --notest Test::Code::TidyAll
+install:
   - cpanm --quiet --installdeps --notest --force --skip-satisfied .
   - cpanm --quiet --notest --skip-satisfied Devel::Cover
 script:
