@@ -79,6 +79,7 @@
       "Patrick Hochstenbach <patrick.hochstenbach@ugent.be>",
       "Sebastien Francois <sf2@ecs.soton.ac.uk>",
       "Stephen Thirlwall <stephent@strategicdata.com.au>",
+      "Stian Soiland-Reyes <stain@apache.org>",
       "tdb01r <tdb01r@4fbceca2-c7fb-0310-b843-c3b59ac5d5c7>",
       "Tim Brody <tdb2@eprints-sun.ecs.soton.ac.uk>",
       "Tim Brody <timbrody@users.noreply.github.com>",
